task done text justification